--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@auth0/auth0-angular": "^2.2.3",
+    "cropperjs": "^1.6.2",
+    "html2canvas": "^1.4.1",
+    "ngx-image-cropper": "^9.1.1",
+    "pdf-lib": "^1.17.1",
+    "pdf2png": "^1.0.5",
+    "pdfjs-dist": "^3.4.120",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
